# secure-home

./: .coverage  .env.sample  .pdm-python  README.md  config.json  pyproject.toml
src/secure_home/: __main__.py  recognition.py  utils.py
tests/: __init__.py
