[project]
name = "secure-home"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hamzat Victor", email = "oluwaborihamzat@gmail.com"},
]
dependencies = [
    "dlib>=19.24.4",
    "numpy>=1.26.4",
    "face-recognition>=1.3.0",
    "opencv-python>=4.10.0.82",
    "face-recognition-models>=0.3.0",
    "setuptools>=70.0.0",
    "pytest>=8.2.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest-cov>=5.0.0",
]
